fixed image position error on mobile

--- a/my-site/components/layout/Header.module.css
+++ b/my-site/components/layout/Header.module.css
@@ -32,5 +32,6 @@
 @media(max-width: 768px) {
     .pageTitle {
         font-size: 2em;
+        margin-top: 2em;
     }
 }
